Take content-type of request into account for filtering. Nut just the content-type of the response.